<resources>
    <string name="app_name">UI Implementation2</string>
    <string name="reference_m79540_0006">Reference: m79540–0006</string>
    <string name="_200">$200</string>
    <string name="introduced_at_baselworld_2017_this_elegant_sporty_watch_captures_the_essence_of_black_bay_in_a_more_formal_version.">Introduced at Baselworld 2017, this elegant, sporty watch captures the essence of Black Bay in a more formal version.</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="_41mm_steel_case">41mm Steel Case</string>
    <string name="automatic">Automatic</string>
    <string name="_5_year_guarantee">5 Year Guarantee</string>
    <string name="waterproof">Waterproof</string>
    <string name="_41mm_steel_n_case">41mm steel \n case</string>
    <string name="_658_00">$658.00</string>
    <string name="todo">TODO</string>
    <string name="tudor_black_bay">Tudor Black Bay</string>
    <string name="_628_00">$628.00</string>
    <string name="total">TOTAL</string>
</resources>